@@ -1,3 +1,6 @@
+Sigil v0.1.7 <ADD DATE>
+    - made viewport switching more robust; the rare crashes should now become much rarer
+
 Sigil v0.1.6 2009.12.06.
     - added a "Report An Issue" menu entry to the Help menu; opens a web browser and goes to the
     "ReportingIssues" wiki page on Sigil's website
